--- a/packages/bread-ui/package.json
+++ b/packages/bread-ui/package.json
@@ -14,6 +14,7 @@
     "expo": "44.0.6",
     "expo-status-bar": "1.2.0",
     "moti": "0.17.1",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
@@ -23,8 +24,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
+    "@expo/webpack-config": "^0.16.18",
     "@types/react": "17.0.39",
     "@types/react-native": "0.64.23",
+    "babel-plugin-module-resolver": "4.1.0",
     "typescript": "4.5.5"
   },
   "private": false
