--- a/packages/bread-ui/package.json
+++ b/packages/bread-ui/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "color": "4.2.1",
     "dripsy": "3.6.0",
     "expo": "44.0.6",
     "expo-status-bar": "1.2.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "7.17.5",
     "@expo/webpack-config": "^0.16.18",
+    "@types/color": "3.0.3",
     "@types/react": "17.0.39",
     "@types/react-native": "0.64.23",
     "babel-plugin-module-resolver": "4.1.0",
